[gd_scene load_steps=9 format=3 uid="uid://scnwsy7xq3yv"]

[ext_resource type="Script" path="res://tamade_button_collision_edge.gd" id="1_0wfxf"]
[ext_resource type="Texture2D" uid="uid://bqj3b4og7m1sq" path="res://icon_no_black.svg" id="2_2w7th"]
[ext_resource type="Script" path="res://tamade_button_shape.gd" id="2_tn6g8"]
[ext_resource type="Script" path="res://audio_stream_player_2d.gd" id="3_gd21y"]
[ext_resource type="AudioStream" uid="uid://b57ywvai05l28" path="res://tamade.wav" id="4_a1njr"]
[ext_resource type="Script" path="res://sprite_2d.gd" id="6_os5uf"]
[ext_resource type="Script" path="res://control.gd" id="6_u8cy2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_supfc"]
friction = 0.0
bounce = 1.0

[node name="tamade_button_collision" type="RigidBody2D"]
texture_filter = 3
collision_layer = 2
collision_mask = 2
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_supfc")
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 30
script = ExtResource("1_0wfxf")

[node name="tamade_button_shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 640, 0, 640, 168, 0, 168)
one_way_collision_margin = 0.0
script = ExtResource("2_tn6g8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(320, 80)
stream = ExtResource("4_a1njr")
volume_db = -10.853
max_polyphony = 100
script = ExtResource("3_gd21y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(320, 80)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2w7th")
region_enabled = true
region_rect = Rect2(0.0316772, 564.067, 2552, 795.069)
script = ExtResource("6_os5uf")

[node name="Control" type="Control" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 640.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 84)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_u8cy2")

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 1
offset_right = 640.0
offset_bottom = 168.0
pivot_offset = Vector2(320, 84)

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="change_size" from="." to="tamade_button_shape" method="_on_tamade_button_collision_change_size"]
[connection signal="change_size" from="." to="Sprite2D" method="_on_tamade_button_collision_change_size"]
[connection signal="change_size" from="." to="Control" method="_on_tamade_button_collision_change_size"]
[connection signal="input_event" from="." to="AudioStreamPlayer2D" method="_on_tamade_button_collision_input_event"]
[connection signal="draw" from="Sprite2D" to="AudioStreamPlayer2D" method="_on_sprite_2d_draw"]
[connection signal="mouse_entered" from="Control" to="Control" method="_on_mouse_entered"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control/TextureButton" to="AudioStreamPlayer2D" method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control/TextureButton" to="Control" method="_on_texture_button_pressed"]
